# Capstone

./: README.md
backup/25Aug20/prototyping/: package.xml
backup/25Aug20/prototyping/realsense_ar_tracking/src/: tf_broadcaster.cpp
backup/25Aug20/prototyping/realsense_ar_tracking_2/: CMakeLists.txt  package.xml
backup/25Aug20/prototyping/realsense_ar_tracking_2/src/: main.cpp  tracker.cpp  tracker.h
backup/25Aug20/prototyping/src/: buffer.cpp
backup/8Aug20/prototyping/src/: main.cpp
backup/prototyping/realsense_ar_tracking/: package.xml
backup/prototyping/realsense_ar_tracking/src/: tf_broadcaster.cpp  tracker.cpp
prototyping/: CMakeLists.txt
prototyping/realsense_ar_tracking/: CMakeLists.txt  package.xml
prototyping/realsense_ar_tracking/launch/: realsense_track.launch
prototyping/realsense_ar_tracking/src/: frames.gv  tracker.cpp
prototyping/realsense_ar_tracking_2/: CMakeLists.txt
prototyping/realsense_ar_tracking_2/launch/: camera_calibration.launch  realsense_track.launch  sealer_fridge_calibration.launch
prototyping/realsense_ar_tracking_2/src/: calibrator.cpp  calibrator.h  camera_calib.cpp  sealer_fridge_calib.cpp  tf_broadcaster.cpp  tracker.cpp  tracker.h
prototyping/src/: buffer.h
